Doctor page, GetAll, Create, SweetAlert-Toast-Question, Error Handler, DoctorCRUD and Pipe-Search ADDED

--- a/src/styles.css
+++ b/src/styles.css
@@ -6,3 +6,13 @@
 a{
     cursor:pointer;
 }
+
+.search{
+    position: absolute;
+    top:10px;
+    left: 25px;
+}
+
+input[type="search"]{
+    padding-left: 35px;
+}
